lib/tests/compile-fail/nonzero_fail_3.stderr
error[E0080]: evaluation of constant value failed
  --> tests/compile-fail/nonzero_fail_3.rs:21:24
   |
21 | #[derive(EnumMetadata, NonZeroRepr)]
   |                        ^^^^^^^^^^^ the evaluated program panicked at 'Expected non-zero discriminant expression', $DIR/tests/compile-fail/nonzero_fail_3.rs:21:24
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)
